--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ block content
 
   div(align="center")
     ul.list-group(id="list" style="width:400px")
-      li.list-group-item.active Values
+      li.list-group-item.active Bonjour
       each val, uuid in values
         li.list-group-item(id=uuid)
           div(align="right" style="float:right")
